--- a/templates/admin_login.html
+++ b/templates/admin_login.html
@@ -49,7 +49,7 @@
  -->
 
 
-
+<!-- 
 <div style="margin-top: -90px;" class="limiter">
   <div class="wrap-login100">
     <div class="login100-pic js-tilt" data-tilt>
@@ -93,7 +93,7 @@
 
     </form>
   </div>
-</div>
+</div> -->
 
 
 
