--- a/templates/staff_login.html
+++ b/templates/staff_login.html
@@ -46,7 +46,7 @@
     <button type="submit" class="btn btn-outline-primary mt-4">Login</button>
 </div> -->
 
-
+<!-- 
 <div style="margin-top: -90px;" class="limiter">
     <div class="wrap-login100">
         <div class="login100-pic js-tilt" data-tilt>
@@ -91,7 +91,7 @@
             </div>
         </form>
     </div>
-</div>
+</div> -->
 
 
 
