--- a/templates/staff_login.html
+++ b/templates/staff_login.html
@@ -27,27 +27,6 @@
 </div>
 
 
-<!-- <div class="container">
-    <br>
-    <h1 class="text-center"><u></u></h1>
-    <form method="POST"> {% csrf_token %}
-
-        <div class="row mt-4">
-            <div class="form-group col-md-12">
-                <label><i style="font-weight: bold;">Username</i></label>
-                <input type="text" class="form-control mt-2" name="username" placeholder="Enter Username" required>
-            </div>
-        </div>
-
-        <div class="row mt-4">
-            <div class="form-group col-md-12">
-                <label><i style="font-weight: bold;">Password</i></label>
-                <input type="password" class="form-control mt-2" name="password" placeholder="Enter Password" required>
-            </div>
-        </div>
-        <button type="submit" class="btn btn-outline-primary mt-4">Login</button>
-</div> -->
-
 
 
 <div style="margin-top: -90px;" class="limiter">
@@ -56,31 +35,43 @@
             <img style="margin-top: 70px;" src="https://images.squarespace-cdn.com/content/v1/52797d42e4b01f648b9e8392/1455601047030-FG48Q4O4I1ITH0YBH6PF/Blueconic__OnCall_WhiteBG-trzown.gif?format=500w" alt="IMG">
         </div>
 
-        <section>
-            <div class="container">
-              <div class="row">
-                <div class="col-md-6 mx-auto">
-                  <div class="card">
-                    <div class="card-header text-black">
-                      <h2>Staff/Employee Login</h2>
-                    </div>
-                    <div class="card-body">
-                        <form action="{% url 'client_login' %}" method="POST" novalidate>
-                          {% csrf_token %}
-                          {% bootstrap_form form %}
-                             <br>
-                                 <input type="submit" value="Login" class="btn btn-block btn-primary">
-                               </div>
-                        </form>
-                     </div>
-                        </div>   
-                    </div>
-                  </div>
-                </div>
+        <form method="POST" enctype="multipart/form-data" class="login100-form validate-form">
+            {% csrf_token %}
+            <span class="login100-form-title">
+                <span class="badge badge-dark  text-center">STAFF ONLY <i class="fa fa-users"></i></span>
+              </span>
+
+            <div class="wrap-input100 validate-input" data-validate="Valid email is required: ex@abc.xyz">
+                <input style="outline: none;border: none;" class="input100" type="text" name="username" placeholder="Enter your username">
+                <span class="focus-input100"></span>
+                <span class="symbol-input100">
+                    <i class="fa fa-user-circle-o" aria-hidden="true"></i>
+                </span>
             </div>
-          </section>
-    
+
+            <div class="wrap-input100 validate-input" data-validate="Password is required">
+                <input style="outline: none;border: none;" class="input100" type="password" name="password" placeholder="Enter Password">
+                <span class="focus-input100"></span>
+                <span class="symbol-input100">
+                    <i class="fa fa-lock" aria-hidden="true"></i>
+                </span>
+            </div>
+
+            <div class="container-login100-form-btn">
+                <button class="login100-form-btn">
+                    Login
+                </button>
+            </div>
+
+            <div class="text-center p-t-12">
+                <span class="txt1">
+                    Forgot
+                </span>
+                <a class="txt2" href="#">
+                    Password ?
+                </a>
+            </div>
+        </form>
     </div>
 </div>
-
 {% endblock %}
